; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_ehci.c_ehci_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_ehci.c_ehci_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__, {}* }
%struct.TYPE_7__ = type { i32 }

@EHCI_USBCMD = common dso_local global i32 0, align 4
@EHCI_CMD_HCRESET = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"reset timeout\0A\00", align 1
@USB_ERR_IOERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ehci_reset(%struct.TYPE_8__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  %6 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %7 = load i32, i32* @EHCI_USBCMD, align 4
  %8 = load i32, i32* @EHCI_CMD_HCRESET, align 4
  %9 = call i32 @EOWRITE4(%struct.TYPE_8__* %6, i32 %7, i32 %8)
  store i32 0, i32* %5, align 4
  br label %10

10:                                               ; preds = %39, %1
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 100
  br i1 %12, label %13, label %42

13:                                               ; preds = %10
  %14 = load i32, i32* @hz, align 4
  %15 = sdiv i32 %14, 128
  %16 = call i32 @usb_pause_mtx(i32* null, i32 %15)
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %18 = load i32, i32* @EHCI_USBCMD, align 4
  %19 = call i32 @EOREAD4(%struct.TYPE_8__* %17, i32 %18)
  %20 = load i32, i32* @EHCI_CMD_HCRESET, align 4
  %21 = and i32 %19, %20
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %38, label %24

24:                                               ; preds = %13
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 1
  %27 = bitcast {}** %26 to i32 (%struct.TYPE_8__*)**
  %28 = load i32 (%struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*)** %27, align 8
  %29 = icmp ne i32 (%struct.TYPE_8__*)* %28, null
  br i1 %29, label %30, label %37

30:                                               ; preds = %24
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 1
  %33 = bitcast {}** %32 to i32 (%struct.TYPE_8__*)**
  %34 = load i32 (%struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*)** %33, align 8
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %36 = call i32 %34(%struct.TYPE_8__* %35)
  br label %37

37:                                               ; preds = %30, %24
  store i32 0, i32* %2, align 4
  br label %49

38:                                               ; preds = %13
  br label %39

39:                                               ; preds = %38
  %40 = load i32, i32* %5, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %5, align 4
  br label %10

42:                                               ; preds = %10
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = call i32 @device_printf(i32 %46, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %48 = load i32, i32* @USB_ERR_IOERROR, align 4
  store i32 %48, i32* %2, align 4
  br label %49

49:                                               ; preds = %42, %37
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32 @EOWRITE4(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @usb_pause_mtx(i32*, i32) #1

declare dso_local i32 @EOREAD4(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
